--- a/small.html
+++ b/small.html
@@ -12,15 +12,6 @@
       <ul>
         <li>
           <a
-            id="file-menu-item"
-            href="#file"
-            class="menu-item"
-            onclick="event.preventDefault(); showPageById('file');"
-            >File</a
-          >
-        </li>
-        <li>
-          <a
             id="console-menu-item"
             href="#console"
             class="menu-item active-menu-item"
@@ -30,20 +21,11 @@
         </li>
         <li>
           <a
-            id="sliders-menu-item"
-            href="#sliders"
+            id="file-menu-item"
+            href="#file"
             class="menu-item"
-            onclick="event.preventDefault(); showPageById('sliders');"
-            >Operations</a
-          >
-        </li>
-        <li>
-          <a
-            id="scenes-menu-item"
-            href="#scenes"
-            class="menu-item"
-            onclick="event.preventDefault(); showPageById('scenes');"
-            >Scenes</a
+            onclick="event.preventDefault(); showPageById('file');"
+            >File</a
           >
         </li>
         <li>
@@ -55,21 +37,27 @@
             >Mode</a
           >
         </li>
+        <li>
+          <a
+            id="sliders-menu-item"
+            href="#sliders"
+            class="menu-item"
+            onclick="event.preventDefault(); showPageById('sliders');"
+            >Sliders</a
+          >
+        </li>
+        <li>
+          <a
+            id="scenes-menu-item"
+            href="#scenes"
+            class="menu-item"
+            onclick="event.preventDefault(); showPageById('scenes');"
+            >Scenes</a
+          >
+        </li>
         <li class="text-right"><span id="viewport"></span>&nbsp;</li>
       </ul>
     </nav>
-
-    <!-- File -->
-    <div id="file" class="page" hidden>
-      <div id="container" class="container">
-        <button id="downloadBtn" onclick="saveCookiesToJson()">
-          Save in Downloads</button
-        ><br />
-        <button id="uploadBtn" onclick="loadCookiesFromJson()">
-          Load from File
-        </button>
-      </div>
-    </div>
 
     <!-- Console -->
     <div id="console" class="page">
@@ -92,49 +80,31 @@
       </footer>
     </div>
 
-    <!-- Sliders -->
-    <div id="sliders" class="page" hidden>
-      <div id="container" class="container">
-        View:<br />
-        <button id="viewAllSlidersBtn" onclick="viewAllSliders()">
-          View all sliders</button
-        ><br />
-        <button id="viewSelectedSlidersBtn" onclick="viewSelectedSliders()">
-          View selected sliders</button
-        ><br /><br />
-        All sliders:<br />
-        <button id="allSlidersToZeroBtn" onclick="allSlidersToZero()">
-          All sliders to zero</button
-        ><br />
-        <button id="allSlidersToFullBtn" onclick="allSlidersToFull()">
-          All sliders to full</button
-        ><br /><br />
-        Sliders selection:<br />
-        <button id="selectNonZeroBtn" onclick="selectNonZeroSliders()">
-          Select non zero sliders
-        </button>
-        <br />
-        <button id="unselectAllBtn" onclick="unselectAllSliders()">
-          Unselect all sliders</button
-        ><br />
-        <button
-          id="riseUpSelectedSlidersBtn"
-          onclick="riseUpAllSelectedSliders()"
-        >
-          Rise up selected sliders
-        </button>
-      </div>
-    </div>
-
-    <!-- Scenes -->
-    <div id="scenes" class="page" hidden>
-      <div id="container" class="container">Scenes</div>
+    <!-- File -->
+    <div id="file" class="page" hidden>
+      <button id="downloadBtn" onclick="saveCookiesToJson()">
+        Save in Downloads
+      </button>
+      <button id="uploadBtn" onclick="loadCookiesFromJson()">
+        Load from File
+      </button>
     </div>
 
     <!-- Mode -->
-    <div id="mode" class="page" hidden>
-      <div id="container" class="container">Mode</div>
+    <div id="mode" class="page" hidden>Mode</div>
+
+    <!-- Sliders -->
+    <div id="sliders" class="page" hidden>
+      <button id="selectNonZeroBtn" onclick="selectNonZero()">
+        Select non zero sliders
+      </button>
+      <button id="unselectAllBtn" onclick="unselectAll()">
+        Unselect all sliders
+      </button>
     </div>
+
+    <!-- Scenes -->
+    <div id="scenes" class="page" hidden>Scenes</div>
 
     <script src="nouislider.min.js"></script>
     <script>
@@ -155,14 +125,14 @@
 
       // -------------------------------- Get , Set and refresh Cookies ---------------------------------
 
-      // sliderValues
-      if (doesCookieExist("sliderValues")) {
-        let jsonString = getCookie("sliderValues");
+      // actualValues
+      if (doesCookieExist("actualValues")) {
+        let jsonString = getCookie("actualValues");
         sliderValues = jsonString ? JSON.parse(jsonString) : [];
       } else {
         sliderValues = new Array(totalSliders).fill(255);
       }
-      setCookie("sliderValues", JSON.stringify(sliderValues), 400);
+      setCookie("actualValues", JSON.stringify(sliderValues), 400);
 
       // selectedSliders
       if (doesCookieExist("selectedSliders")) {
@@ -262,8 +232,8 @@
             });
 
             const knob = slider.querySelector(".noUi-handle");
-            if (selectedSliders[i]) {
-              knob.style.backgroundColor = "#9f9";
+            if (knob) {
+              knob.style.backgroundColor = "#aaa";
             }
 
             const track = slider.querySelector(".noUi-connect");
@@ -286,7 +256,7 @@
 
             slider.noUiSlider.on("end", function () {
               valueDisplay.style.color = "black";
-              setCookie("sliderValues", JSON.stringify(sliderValues), 400);
+              setCookie("actualValues", JSON.stringify(sliderValues), 400);
             });
 
             // Increment the counter for sliders in the current row
@@ -311,14 +281,12 @@
         updatePaginationInfo();
       }
 
-      // --------------------------------- Change page ---------------------------------
       function changePage(direction) {
         currentPage += direction;
         currentPage = Math.max(1, Math.min(currentPage, totalNumberOfPages));
         updateLayout();
       }
 
-      // --------------------------------- Update pagination info ---------------------------------
       function updatePaginationInfo() {
         document.getElementById(
           "pageInfo"
@@ -352,7 +320,7 @@
           }
         }
       }
-      // Toggle blackout
+
       function toggleBlackout() {
         blackout = !blackout;
         if (blackout) {
@@ -364,7 +332,6 @@
         updateLayout();
       }
 
-      // Toggle Navbar Hide
       function toggleNavbarHide() {
         menuEnable = !menuEnable;
         setCookie("menuEnable", JSON.stringify(menuEnable), 365);
@@ -374,7 +341,6 @@
       window.onload = updateLayout;
       window.onresize = updateLayout;
 
-      // keyboard controls
       document.addEventListener("keydown", (event) => {
         if (event.key === "ArrowLeft") {
           changePage(-1);
@@ -396,8 +362,6 @@
       });
 
       // Helper Fuctions ------------------------------------------------------
-
-      // Cookie Get
       function getCookie(name) {
         const nameEQ = name + "=";
         const ca = document.cookie.split(";");
@@ -410,7 +374,6 @@
         return null;
       }
 
-      // Cookie Set
       function setCookie(name, value, days = 400) {
         let expires = "";
         if (days) {
@@ -423,7 +386,6 @@
         document.cookie = cookieString;
       }
 
-      // Check if cookie exists
       function doesCookieExist(name) {
         // Create the cookie name string with equal sign
         const nameEQ = name + "=";
@@ -440,7 +402,7 @@
         return false;
       }
 
-      // Save cookies to a file
+      // Download cookies to a file
       function saveCookiesToJson(filename = "ConsoleConfig.json") {
         const cookies = document.cookie.split(";");
         const cookieJson = {};
@@ -463,11 +425,9 @@
         a.click();
         document.body.removeChild(a);
         URL.revokeObjectURL(url);
-        updateLayout();
-        showPageById("console");
       }
 
-      // Load cookies from a file
+      // Upload cookies from a file
       function loadCookiesFromJson() {
         const input = document.createElement("input");
         input.type = "file";
@@ -490,52 +450,13 @@
                 setCookie(name, cookies[name]);
               });
               console.log("All cookies set.");
-              updateLayout();
-            } catch (error) {
-              console.error("Error parsing JSON:", error);
-            }
-          };
 
-          reader.onerror = (error) =>
-            console.error("Error reading file:", error);
-          reader.readAsText(file);
-        };
-
-        input.click();
-      }
-
-      // Load cookies from a file
-      function loadCookiesFromJson() {
-        const input = document.createElement("input");
-        input.type = "file";
-        input.accept = ".json";
-
-        input.onchange = (e) => {
-          const file = e.target.files[0];
-          if (!file) {
-            console.error("No file selected.");
-            return;
-          }
-
-          const reader = new FileReader();
-          reader.onload = function (event) {
-            const contents = event.target.result;
-            try {
-              const cookies = JSON.parse(contents);
-              Object.keys(cookies).forEach((name) => {
-                console.log(`Setting cookie: ${name} = ${cookies[name]}`);
-                setCookie(name, cookies[name]);
-              });
-
-              console.log("All cookies set.");
-              let jsonString = getCookie("sliderValues");
+              // Call updateLayout here, after all cookies are set
+              let jsonString = getCookie("actualValues");
               sliderValues = jsonString ? JSON.parse(jsonString) : [];
               jsonString = getCookie("menuEnable");
               menuEnable = jsonString ? JSON.parse(jsonString) : [];
-              jsonString = getCookie("selectedSliders");
-              selectedSliders = jsonString ? JSON.parse(jsonString) : [];
               updateLayout();
-              showPageById("console");
             } catch (error) {
               console.error("Error parsing JSON:", error);
             }
@@ -547,9 +468,22 @@
         };
 
         input.click();
+        let jsonString = getCookie("actualValues");
+        sliderValues = jsonString ? JSON.parse(jsonString) : [];
+        jsonString = getCookie("menuEnable");
+        menuEnable = jsonString ? JSON.parse(jsonString) : [];
       }
 
-      // Show Page by ID
+      function openFileInput() {
+        const fileInput = document.getElementById("fileInput");
+        fileInput.click();
+      }
+
+      function handleFileSelect(event) {
+        const file = event.target.files[0];
+        uploadCookiesFromFile(file);
+      }
+
       function showPageById(pageId) {
         // Hide all elements with the class 'page' using the 'hidden' attribute
         const pages = document.querySelectorAll(".page");
@@ -576,72 +510,6 @@
         } else {
           console.warn(`No element found with ID '${pageId}' and class 'page'`);
         }
-      }
-
-      // Select Non Zero Sliders
-      function selectNonZeroSliders() {
-        for (let i = 0; i < totalSliders; i++) {
-          if (sliderValues[i] > 0) {
-            selectedSliders[i] = 1;
-          } else {
-            selectedSliders[i] = 0;
-          }
-        }
-        setCookie("selectedSliders", JSON.stringify(selectedSliders), 400);
-        updateLayout();
-        showPageById("console");
-      }
-
-      // Unselect All Sliders
-      function unselectAllSliders() {
-        selectedSliders = new Array(totalSliders).fill(0);
-        setCookie("selectedSliders", JSON.stringify(selectedSliders), 400);
-        updateLayout();
-        showPageById("console");
-      }
-
-      // All Sliders To Zero
-      function allSlidersToZero() {
-        sliderValues = new Array(totalSliders).fill(0);
-        setCookie("sliderValues", JSON.stringify(sliderValues), 400);
-        updateLayout();
-        showPageById("console");
-      }
-
-      // All Sliders To Full
-      function allSlidersToFull() {
-        sliderValues = new Array(totalSliders).fill(255);
-        setCookie("sliderValues", JSON.stringify(sliderValues), 400);
-        updateLayout();
-        showPageById("console");
-      }
-
-      // Rise up all selected sliders to 255
-      function riseUpAllSelectedSliders() {
-        for (let i = 0; i < totalSliders; i++) {
-          if (selectedSliders[i] == 1) {
-            sliderValues[i] = 255;
-          } else {
-            sliderValues[i] = 0;
-          }
-        }
-        setCookie("sliderValues", JSON.stringify(sliderValues), 400);
-        updateLayout();
-        showPageById("console");
-      }
-
-      // View all sliders
-      function viewAllSliders() {
-        // no hace nada
-        updateLayout();
-        showPageById("console");
-      }
-
-      //View selected sliders
-      function viewSelectedSliders() {
-        // no hace nada
-        updateLayout();
-        showPageById("console");
       }
     </script>
   </body>
